# COVID-19-Simulation

./: .gitignore  Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs  person.rs  wall.rs
